--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,30 +12,29 @@
         android:text="@string/search_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:id="@+id/textView"
+        android:layout_above="@+id/editText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="126dp"
-        android:id="@+id/textView" />
+        android:layout_marginBottom="66dp" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="49dp"
         android:maxLines="1"
         android:minLines="1"
         android:maxWidth="100dp"
-        android:minWidth="100dp" />
+        android:minWidth="100dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/search_btn_text"
         android:id="@+id/button"
+        android:layout_marginTop="91dp"
         android:layout_below="@+id/editText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="39dp" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
