--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,10 +32,11 @@
         android:id="@+id/editText"
         android:maxLines="1"
         android:minLines="1"
-        android:maxWidth="100dp"
+        android:maxWidth="200dp"
         android:minWidth="100dp"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:selectAllOnFocus="false" />
 
     <Button
         android:layout_width="wrap_content"
